@@ -1718,6 +1718,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 ##
 CONFIG_RAMZSWAP=m
 CONFIG_RAMZSWAP_STATS=y
+CONFIG_RAMZSWAP_OLD_COMPRESSION=n
 ##
 
 #
